[PN-16011] feat: cleanup sonar issues